# telegram-bot-for-ice-cream-shop

./: .gitignore  README.md  pyproject.toml
app/: main.py  tables.py
app/handlers/: __init__.py  commands.py
app/infra/postgres/: db.py
settings/: config.py
